feat: add join game feature
