# server/src/routes/index.ts
@@ -9,6 +9,7 @@ routes.get('/api/games', controllers.GameController.getList);
 routes.get('/api/games/:id', controllers.GameController.getOne);
 routes.post('/api/games', controllers.GameController.create);
 routes.put('/api/games/:id', controllers.GameController.update);
+routes.put('/api/games/:gameId/join', controllers.GameController.join);
 routes.delete('/api/games/:id', controllers.GameController.delete);
 
 // Locations
