# server/src/types/model/join-game-params.ts
@@ -1,0 +1,7 @@
+export interface JoinGameParams {
+  gameId: string;
+}
+
+export interface JoinGameBody {
+  playerName: string;
+}
